--- a/package.json
+++ b/package.json
@@ -9,25 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@prisma/client": "^6.19.1",
+    "bcryptjs": "^2.4.3",
+    "date-fns": "^2.30.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "pg": "^8.16.3",
+    "prisma": "^6.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zod": "^3.22.4",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "date-fns": "^2.30.0",
-    "react-infinite-scroll-component": "^6.1.0",
     "react-hook-form": "^7.48.2",
-    "@hookform/resolvers": "^3.3.2",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.294.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20",
+    "@types/pg": "^8.16.0",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
