--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "next-intl": "^4.6.0",
     "pg": "^8.16.3",
     "prisma": "^6.19.1",
     "react": "^18.2.0",
